fixed alignment of headers

--- a/static/sass/atoms/_item-list.scss
+++ b/static/sass/atoms/_item-list.scss
@@ -25,7 +25,6 @@
 
             h3 {
                 @include rem(font-size, 22px);
-                text-align: left;
                 font-weight: normal;
                 text-align: center;
 
